调整雷震与野牛

--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -195,7 +195,7 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-08-29</em></p>
+<p class="date"><em>更新时间：2022-09-12</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -203,6 +203,7 @@
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>（只包含主要的更新，不含小修改）</em></p>
 <ul>
+<li>2022年9月11日：调整<a href="战士系.html#雷震">雷震</a>，<a href="斗士系.html#野牛">野牛</a></li>
 <li>2022年8月24日：更新<a href="战术系.html#狂飙">狂飙</a>。</li>
 <li>2022年8月21日：新增<a href="斗士系.html#飞毛腿">飞毛腿</a>，介绍擎天柱组合金刚协同（见<a href="战术系.html#战擎">战擎</a>）。</li>
 <li>2022年6月26日：新增<a href="战术系.html#补天士">补天士</a>。</li>
@@ -229,7 +230,7 @@
 <li>重写<a href="战士系.html#探长">探长</a>玩法；修订<a href="科技系.html#天火">天火</a>，<a href="侦查系.html#黄豹">黄豹</a>，<a href="战士系.html#巨蝎勇士">巨蝎勇士</a>，<a href="斗士系.html#汽车大师">汽车大师</a>，<a href="斗士系.html#g1铁皮">G1铁皮</a>。</li>
 </ul></li>
 <li>2022年4月12日：<a href="斗士系.html#g1铁皮">G1铁皮解析</a>，修复能力雷达图刻度错误。</li>
-<li>2022年4月6日：挽歌、闹翻天解析。</li>
+<li>2022年4月6日：<a href="战士系.html#挽歌">挽歌</a>、<a href="科技系.html#闹翻天">闹翻天</a>解析。</li>
 </ul>
 </div>
 <div id="更新预告" class="section level2 hasAnchor" number="1.2">
