--- a/chars_book/对战ai策略.html
+++ b/chars_book/对战ai策略.html
@@ -292,8 +292,8 @@
 <div id="对战ai斗士铁皮" class="section level3 hasAnchor" number="10.2.8">
 <h3><span class="header-section-number">10.2.8</span> 对战AI斗士铁皮<a href="对战ai策略.html#对战ai斗士铁皮" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>目前主要是在铁皮第一次登场的特殊事件中跟他对战。但是因为有回血和不稳定能量晶体这样的变态模块，很多时候不能按自己的意思来练。除了发现他的护甲挨打的时候上来的很快之外，也发现他对DOT没有什么办法。另外特殊技不好躲，见特殊技躲法。</p>
-<p><strong>S1：后，后，后；S2：后，后，侧</strong>。S1因为老铁比较磨叽，所以要掌握好节奏，而且第二发的霰弹枪虽然没有警车那样飞全屏，但是实际闪起来总是感觉判定时间比较长，建议连续后闪两下拉开距离，这样最后那一拳就不用闪了。S2闪掉前两发记得第三发是侧闪，只要不打中是不会出霸体的。</p>
-<p>铁皮S1和S2的诡异性一方面让人很难躲好，另一方面，真被打中了还可以试着侧闪脱身…</p>
+<p><strong>S1：后，后，后；S2：后，后，侧</strong>。S1因为老铁比较磨叽，所以要掌握好节奏，而且第二发的霰弹枪虽然没有警车那样飞全屏，但是实际闪起来总是感觉判定时间比较长，建议连续后闪两下拉开距离，这样最后那一拳就不用闪了，如果距离较近，第二发最好是防。S2闪掉前两发记得第三发是侧闪，只要不打中是不会出霸体的。</p>
+<p>铁皮S1和S2的诡异性一方面让人很难躲掉，另一方面真被打中了却可以试着脱身…</p>
 </div>
 <div id="对战ai飞毛腿" class="section level3 hasAnchor" number="10.2.9">
 <h3><span class="header-section-number">10.2.9</span> 对战AI飞毛腿<a href="对战ai策略.html#对战ai飞毛腿" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -395,7 +395,7 @@
 <div id="对战ai横炮" class="section level3 hasAnchor" number="10.4.3">
 <h3><span class="header-section-number">10.4.3</span> 对战AI横炮<a href="对战ai策略.html#对战ai横炮" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>横炮在被近战打到7下会出规避，看到规避后就要控制好节奏。S2结束后也有近战规避，所以闪掉了之后就先打三枪回去再说。</p>
-<p>横炮的气也来的很快<a href="#fn22" class="footnote-ref" id="fnref22"><sup>22</sup></a>：闪避小枪会加气，招牌更是有如自带机器人资源模块。面对高觉醒的横炮，开局尽量躲远一点，让他自己加气，然后骗掉一个S1再说，否则开局就放开了打近战加对枪，很可能你都没反应过来他就给你来个S3。</p>
+<p>横炮的气也来的很快<a href="#fn21" class="footnote-ref" id="fnref21"><sup>21</sup></a>：闪避小枪会加气，招牌更是有如自带机器人资源模块。面对高觉醒的横炮，开局尽量躲远一点，让他自己加气，然后骗掉一个S1再说，否则开局就放开了打近战加对枪，很可能你都没反应过来他就给你来个S3。</p>
 <p><strong>S1：后，后，后；S2：后，后，侧或后</strong>。横炮的S1如果压在墙角，最后的踩头要看准了闪。S2和阿尔茜的S1类似，最后一下躲开射击点就行。</p>
 </div>
 <div id="对战ai警车" class="section level3 hasAnchor" number="10.4.4">
@@ -803,11 +803,10 @@
 
 
 
-
 <div class="footnotes">
 <hr />
-<ol start="22">
-<li id="fn22"><p>是非常快<a href="对战ai策略.html#fnref22" class="footnote-back">↩︎</a></p></li>
+<ol start="21">
+<li id="fn21"><p>是非常快<a href="对战ai策略.html#fnref21" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
