--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -246,34 +246,44 @@
 <!--Note-->
 <div id="特点分析-19" class="section level3 hasAnchor" number="5.2.1">
 <h3><span class="header-section-number">5.2.1</span> 特点分析<a href="战士系.html#特点分析-19" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>雷震是最早一批的战士系机器人，据说在内测版中强到逆天，公测后削弱了。战士中少有的远程型，带护甲的玩法也让他在战士中显得不那么脆（直到巨蝎的出现）</p>
+<p>雷震是最早一批的战士系机器人，据说在内测版中强到逆天，公测后削弱了。战士中混搭着近战和远程玩法，护甲也让他在战士中显得不那么脆。</p>
 <div id="能力-19" class="section level4 hasAnchor" number="5.2.1.1">
 <h4><span class="header-section-number">5.2.1.1</span> 能力<a href="战士系.html#能力-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>近战暴击有25%概率流血（5秒，78~120%的攻），相比漂移和风刃，概率低很多，但是时间和强度高很多。</li>
-<li>重击和S2有概率晕，吃暴击时概率得到护甲，可以通过重击来刷新护甲时间，但与钢锁的重击刷新相比，略显鸡肋。</li>
-<li>雷震的S1是少数几个没有额外效果的特殊技（当然，出暴击还是会概率流血），由于动画效果长，被压到角落里是很难完美闪掉的。S2和S3效果相同：概率晕。</li>
-<li>由于暴击率不高，实战中雷震用晕点打出的额外输出往往比他的流血能力更来得更多。</li>
+<li>近战或者远程飞刀出暴击有25%概率流血（5秒，78~120%的攻），相比漂移和风刃，概率低很多，但是时间和强度高很多。</li>
+<li>飞刀是物理攻击，打通天晓时像漂移一样比较吃力，而且他的重击炮弹也是物理攻击！</li>
+<li>重击有概率晕</li>
+<li>吃暴击时概率得到护甲，可以通过重击来刷新护甲时间，但与钢锁的重击刷新相比，略显鸡肋。</li>
+<li>S技：
+<ul>
+<li>雷震的S1是少数几个没有额外效果的特殊技（当然，出暴击还是会概率流血），由于动画效果长，被压到角落里是很难完美闪掉的</li>
+<li>S2和S3差不多，最后一发有概率晕。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-18" class="section level4 hasAnchor" number="5.2.1.2">
 <h4><span class="header-section-number">5.2.1.2</span> 招牌<a href="战士系.html#招牌-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>雷震暴击率不高的设计也许是为了配合他的招牌：近战打空后为下一次暴击增加暴击伤害。这个招牌再配合剑圣协同，让平时暴击不高的雷震经常冷不丁打出恐怖的暴击伤害秒杀对手（最高见过的截图是2万多伤害），真是“不是不报，时候未到”。但是近战打空也是有一定风险的。</p>
+<p><strong>钢铠法</strong></p>
+<p>雷震暴击率不高的设计也许是为了配合他的招牌：近战打空后为下一次暴击增加暴击伤害。这个招牌再配合剑圣协同，让平时暴击不高的雷震经常冷不丁打出恐怖的暴击伤害秒杀对手（有一个著名玩家的账号就叫“雷震一刀四万七”，可见领悟之深），真是“不是不报，时候未到”。但是近战打空也是有一定风险的。</p>
 </div>
 <div id="协同-18" class="section level4 hasAnchor" number="5.2.1.3">
 <h4><span class="header-section-number">5.2.1.3</span> 协同<a href="战士系.html#协同-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>剑圣：不赘述。</p>
+<ul>
+<li>盟友（双向：声波、喷气机、反冲）：加护甲</li>
+<li>敌人（双向：飞过山、爵士、千斤顶）：加攻击</li>
+<li>剑圣（双向：风刃、漂移、恐龙勇士）：剑圣协同在游戏中介绍（翻译）得比较拗口，主要的意思就是每次<strong>刀剑攻击</strong>没有在对方身上打出暴击，就记下一笔+30%的暴击伤害（如果对方有暴击抗性增益，如猩猩队长，或者我方受到降低暴击率减益，则不记），然后在下一次出暴击的时候一次兑现。这让剑圣们有了更大的伤害保障，而且是按百分比增加，也就是说10次打不出暴击，下一次就加300%，如果第11下是S技出了暴击（如风刃S2），伤害会很恐怖。</li>
+</ul>
 </div>
 <div id="短板-19" class="section level4 hasAnchor" number="5.2.1.4">
 <h4><span class="header-section-number">5.2.1.4</span> 短板<a href="战士系.html#短板-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>雷震没有明显的短板，但他和漂移到底谁强一直是个玩家津津乐道的话题。在五星机器人的发布上，雷震比漂移晚了很多，导致很多玩家选择了漂移。面对侦查，雷震没有对规避的有效控制，只能是通过招牌来“复仇”式的补上。由于远程飞刀是物理攻击，在面对通天晓的时候最好堆满对方10层物理抗性后，用重击和S2，S3打能量类输出。</p>
+<p>国外玩家对雷震的评价非常低，甚至比碎骨魔和探长都不如，个人觉得雷震没有明显的短板，上手也挺容易，但他和漂移到底谁强一直是个玩家津津乐道的话题。在五星机器人的发布上，雷震比漂移晚了很多，很多玩家选择了漂移，毕竟漂移对规避的克制更胜一筹。面对侦查，雷震没有对规避的有效控制，只能是通过招牌来“复仇”式的补上。由于远程飞刀和重击的炮弹都是物理攻击，所以遇到通天晓、战术鲨鱼和物理抗性模块，只能靠S2最后一发来打出能量攻击，否则只有靠流血来打伤害。</p>
 </div>
 </div>
 <div id="推荐打法-19" class="section level3 hasAnchor" number="5.2.2">
 <h3><span class="header-section-number">5.2.2</span> 推荐打法<a href="战士系.html#推荐打法-19" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <div id="短战斗-18" class="section level4 hasAnchor" number="5.2.2.1">
 <h4><span class="header-section-number">5.2.2.1</span> 短战斗<a href="战士系.html#短战斗-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>近战缠斗，配合重击击倒压起身。重击命中时紧盯是否成功晕点决定是否乘胜追击。S2为主要输出手段。</p>
+<p>近战缠斗，配合重击击倒压起身。重击命中时如果打晕，晕的时间不长，要盯紧对方，决定是否飞两刀再乘胜追击。S2为主要输出手段。</p>
 </div>
 <div id="长战斗-18" class="section level4 hasAnchor" number="5.2.2.2">
 <h4><span class="header-section-number">5.2.2.2</span> 长战斗<a href="战士系.html#长战斗-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -376,7 +386,7 @@
 </div>
 <div id="招牌-20" class="section level4 hasAnchor" number="5.4.1.2">
 <h4><span class="header-section-number">5.4.1.2</span> 招牌<a href="战士系.html#招牌-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>。</p>
+<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间，也就是保持原有的伤害速率的前提下延长时间（总伤害增加）。这让漂移特别适合完美流的玩家。</p>
 </div>
 <div id="协同-20" class="section level4 hasAnchor" number="5.4.1.3">
 <h4><span class="header-section-number">5.4.1.3</span> 协同<a href="战士系.html#协同-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -388,7 +398,7 @@
 </div>
 <div id="短板-21" class="section level4 hasAnchor" number="5.4.1.4">
 <h4><span class="header-section-number">5.4.1.4</span> 短板<a href="战士系.html#短板-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>漂移的技能偏科到了极限：全近战，全物理攻击。在面对通天晓的时候他完全没有办法让对方切换抗性。面对猩猩的时候，只要放S技，基本上是给对方回血。</p>
+<p>漂移的技能偏科到了极限：全近战，全物理攻击。在面对通天晓的时候他完全没有办法让对方切换抗性，只能靠流血去打伤害。面对猩猩的时候，只要放S技，基本上是给对方回血。漂移手上的刀有点短，在雷震风刃能砍到的极限距离，漂移会砍空，留下破绽给对手。</p>
 </div>
 </div>
 <div id="推荐打法-21" class="section level3 hasAnchor" number="5.4.2">
@@ -556,7 +566,7 @@
 <p>蝎子的血量在战士系高居榜首，在全游戏中也仅次于6个斗士、震天尊与爆威，排名第9。</p>
 <ul>
 <li>毒液充能：一格气后获得一层毒液（经测试，最多堆10层）。蝎子的毒液可谓稳赚不赔的买卖，因为留在自己身上可加攻，一层就20%，如果觉醒，还回血。通过重击或者S2施加到对手身上成为12秒逆火，对方要么出特殊吃伤害，要么不出特殊，2层逆火过期会晕3秒，3层以上逆火过期吃500%的震击伤害。</li>
-<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn13" class="footnote-ref" id="fnref13"><sup>13</sup></a>简直是太爽。</li>
+<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>简直是太爽。</li>
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
 </ul>
 </div>
@@ -586,7 +596,7 @@
 <p>长战斗时选择毒液给自己。</p>
 <p>打法一适合有防震击手段的敌人（觉醒猩猩，反冲等）或者血厚但没护甲、抗性的敌人。战术是只用S1，不放重击，一路把毒液堆到10层，用200%的攻击加成打架，输出是有保障的。</p>
 <p>打法二适用于比较难啃的硬骨头，他们因为有护甲、抗性或者护盾，需要施加一定DOT或者逆火伤害来保证输出。初期还是坚决不放重击也不放S1，直接等到第一个S3集满，毒液达到3层。</p>
-<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a>。</p>
+<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn13" class="footnote-ref" id="fnref13"><sup>13</sup></a>。</p>
 </div>
 </div>
 <div id="基地防守-24" class="section level3 hasAnchor" number="5.7.3">
@@ -737,9 +747,8 @@
 <ol start="10">
 <li id="fn10"><p>回想起来，这样的设计可能符合1.0版中阿尔茜只能在出暴击的时候才能得到能量的设定：因为能量来得少，所以S1要更优秀一些。<a href="战士系.html#fnref10" class="footnote-back">↩︎</a></p></li>
 <li id="fn11"><p>曾经S3在猩猩黄甲时上打不出流血，后来修正正常了。<a href="战士系.html#fnref11" class="footnote-back">↩︎</a></p></li>
-<li id="fn12"><p>游戏中并没有提到“延长时间”具体指什么，是指单纯地延长DOT的持续时间（总伤害不变），还是保持原有的伤害速率的前提下延长时间（总伤害增加）？我倾向于认为是后者，因为前者似乎意义不大<a href="战士系.html#fnref12" class="footnote-back">↩︎</a></p></li>
-<li id="fn13"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref13" class="footnote-back">↩︎</a></p></li>
-<li id="fn14"><p>只怕惊天雷<a href="战士系.html#fnref14" class="footnote-back">↩︎</a></p></li>
+<li id="fn12"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref12" class="footnote-back">↩︎</a></p></li>
+<li id="fn13"><p>只怕惊天雷<a href="战士系.html#fnref13" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
