--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -732,7 +732,7 @@
 <li>40%血以下免疫眩晕。这个可能影响到爆破铁皮的双S1直接带走的策略。</li>
 <li>前冲有70%的概率净化自身的一个减益。看起来概率还可以，但是为了净化而前冲不是很明智，只能说多一层保护自己的手段。（在发布的时候这个技能有bug：一次前冲就彻底免疫所有减益了）</li>
 <li>完成一套近战连击，25~50%的概率驱散对方一个近战增益，25~50%的概率驱散对方一个护甲增益。这在对付斗士的时候还是很不错的。</li>
-<li>重击命中时（实测不一定要命中，对方极限侧闪也算），对方身上每一个增益施加一层3~15%的破甲7秒，并且所有的护甲增益会被移除。这在面对增益比较多的对手如搅拌者，通天晓，猩猩的时候特别有用，而且<strong>连续重击命中还可以堆积</strong>，轻轻松松几十层破甲！开始时玩家担心是bug，但这一点得到了官方的确认，就是这样设计的。补天士也是第一个用远程攻击施加破甲的角色。</li>
+<li>重击命中时（实测不一定要命中，对方极限侧闪也算），对方身上每一个增益施加一层3~15%的破甲7秒，并且所有的护甲增益会被移除。这在面对增益比较多的对手如搅拌者，通天晓，猩猩的时候特别有用，而且<strong>连续重击命中还可以堆积</strong>，轻轻松松几十层破甲！开始时玩家担心是bug，但这一点得到了官方的确认，就是这样设计的（<strong>但根据网友反馈，只是看上去有很多层破甲，实际并没有扩大伤害</strong>）。补天士也是第一个用远程攻击施加破甲的角色。</li>
 <li>被击倒时，有概率在3秒内修复受到伤害的13~20%，概率为失去的血量百分比乘以0.6%（即半血时概率30%）。这一点对玩家只能说是心理安慰，对付电脑补天士则要注意低血时少击倒他，或者确认能结束战斗时再放S技。</li>
 <li>三个S技全是学自斗士系角色（分别是碾碎器，汽车大师和斗擎），作为领导模块持有者居然用蹬踏、头槌这些动作是不是太丢份了……网友笑称这是一位披着战术系外衣的斗士饿鲨。
 <ul>
@@ -745,6 +745,7 @@
 <div id="招牌-7" class="section level4 hasAnchor" number="3.9.1.2">
 <h4><span class="header-section-number">3.9.1.2</span> 招牌<a href="战术系.html#招牌-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p><strong>补天士崛起</strong>：补天士每失去10%的血量就提升5~15%的攻击力。面对故事和特殊任务的Boss时翻倍。这招牌有点汽车大师的味道，吃程序。</p>
+<p><strong>据玩家称，目前这个招牌有bug，是不起作用的。</strong></p>
 </div>
 <div id="协同-8" class="section level4 hasAnchor" number="3.9.1.3">
 <h4><span class="header-section-number">3.9.1.3</span> 协同<a href="战术系.html#协同-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
