--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -514,36 +514,53 @@
 <!--Note-->
 <div id="特点分析-14" class="section level3 hasAnchor" number="4.6.1">
 <h3><span class="header-section-number">4.6.1</span> 特点分析<a href="斗士系.html#特点分析-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>野牛是较晚发布的斗士，打法异于常人。主动站防类的代表人物。</p>
+<p>野牛是名副其实的斗士，标准的近战蛮横型打法。</p>
 <div id="能力-14" class="section level4 hasAnchor" number="4.6.1.1">
 <h4><span class="header-section-number">4.6.1.1</span> 能力<a href="斗士系.html#能力-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>站防一段时间获得霸体，每次前冲获得加攻。但是没有霸体时一后退就失去所有的加攻，这让野牛的打法很古怪，只有在霸体的时候前后前后几次把攻击堆起来，但是无脑的前冲后退少不了吃一些伤害。</li>
-<li>S1很鸡肋，如果没有堆到足够的加攻，全程喷火都不一定出燃烧，这喷火器是马戏团的吗？S2虽然输出大，但是不可防御的属性对玩家意义不大，主要看是否打晕，眩晕概率同样取决于加攻的数目。真正凶狠的还靠S3。</li>
+<li>野牛天然自带10%的被动护甲（不显示出来，不能被通天晓利用破甲），前冲时还有25%的额外护甲，这是为了配合他的下一条能力——</li>
+<li>前冲时100%获得一个20%的近战增益，可以堆积10层，然而，只要一后退就会失去所有的层数，这让堆积近战变得很困难，所以又有了下一条能力——</li>
+<li>站防1.5秒获得4秒霸体（身上每层加攻可以让充霸体时间缩短8%），有霸体时后退则不会丢失加攻，这让野牛的打法很古怪，只有在霸体的时候“前冲-后退”几次把攻击堆起来，但是无脑的前冲和后退少不了吃一些伤害。使用一次霸体后要5秒冷却才能再次充。</li>
+<li>重击时，每层加攻加2%的概率打晕2秒。野牛的重击和别人不太一样，半屏的电光，又可以侧闪又可以后闪，看似鸡肋，其实对野牛的前冲有很大的帮助。</li>
+<li>S技：
+<ul>
+<li>S1很鸡肋，如果没有堆到足够的加攻，全程喷火都不一定出燃烧，这喷火器是马戏团的吗？</li>
+<li>S2虽然输出大，但是不可防御的属性对玩家意义不大，主要看是否打晕，眩晕概率同样取决于加攻的层数</li>
+<li>S3真的是伤害巨大，打完还得三个加攻（觉醒则自动出招牌）和8.5秒霸体。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-13" class="section level4 hasAnchor" number="4.6.1.2">
 <h4><span class="header-section-number">4.6.1.2</span> 招牌<a href="斗士系.html#招牌-13" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>每获得三个加攻变得狂暴，提升暴击，并且20%概率破防，出招牌还净化伤害减益并且在招牌期间免疫伤害减益。如果玩家善于获得加攻，是一个不错的提升。</p>
+<p><strong>狂暴</strong>：</p>
+<p>每获得三个加攻，进入6秒的狂暴状态，提升暴击率（与招牌等级相关），并且普通攻击有20%概率破防，出招牌期间还净化伤害减益并且免疫伤害减益。野牛本来就不太好用，而他对这个招牌的依赖度几乎是100%，如果不觉醒，根本没法上场。</p>
 </div>
 <div id="协同-13" class="section level4 hasAnchor" number="4.6.1.3">
 <h4><span class="header-section-number">4.6.1.3</span> 协同<a href="斗士系.html#协同-13" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>帮助野兽角色重击后概率破防，这对他们是相当大的提升。但遗憾的是野牛自己并不获得这个效果，何况还跟猩猩产生属性冗余，只能在5人推图时起到作用，堪称“不用上场的辅助”。另外近战连击破防后连大招很可能被电脑防住，这个bug官方一直没有修复。</p>
+<ul>
+<li>盟友（双向：声波、喷气机、反冲）：加护甲</li>
+<li>敌人（双向：飞过山、爵士、千斤顶）：加攻击</li>
+<li>野兽祖先（授益：六名野兽战争角色）：考虑到这个协同是野牛专有的，就依然写在野牛的授益中了。野牛帮助野兽角色重击后概率破防，这对他们是相当大的提升。但遗憾的是野牛自己并不获得这个效果，何况还跟猩猩产生属性冗余，只能在5人推图时起到作用，堪称“不用上场的辅助”。另外近战连击破防后连大招很可能被电脑防住，这个bug官方一直没有修复。</li>
+</ul>
 </div>
 <div id="短板-14" class="section level4 hasAnchor" number="4.6.1.4">
 <h4><span class="header-section-number">4.6.1.4</span> 短板<a href="斗士系.html#短板-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>野牛的打法不容易上手，正常打法前冲打完没连特殊就是后退找机会，野牛除非有霸体，不能轻易后退，霸体充电又有冷却时间，侧闪又容易被对手抓住。所以要保住加攻，只能经常防御。如果彻底放弃攒加攻的打法，野牛又失去了存在的意义，所以终归更适合短战斗。</p>
+<p>野牛的打法不容易上手，正常打法前冲打完没连特殊就是后退找机会，野牛除非有霸体，不能轻易后退，霸体充电又有冷却时间，侧闪又容易被对手抓住。所以要保住加攻，只能经常防御。如果彻底放弃攒加攻的打法，野牛又失去了存在的意义，所以终归更适合短战斗。虽然他在斗士中玩法特立独行，也失去了专门培养的意义。</p>
 </div>
 </div>
 <div id="推荐打法-14" class="section level3 hasAnchor" number="4.6.2">
 <h3><span class="header-section-number">4.6.2</span> 推荐打法<a href="斗士系.html#推荐打法-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>前面说过，野牛的技能设定让他只有一种特别的玩法，如果不学这个玩法，练汽车大师比练野牛省事多了。</p>
+<p>这种玩法中，近战要坚决用四连一重击，因为如果用五连，打完后只能后闪或者防御。而野牛的重击回弹很小，算是一种远程重击。如果命中，则可以点枪压制前冲或者直接前冲压起身，然后如果打中或者被防，就还是四连一重击（出招牌的时候可能就打破防了）。如果对方躲掉重击，因为距离短，电脑往往用的是后闪来躲避，这就使得野牛和电脑之间还是会有一定的距离，可以再次找机会点枪前冲。如此尽快充到3~5层加攻，再充出霸体中后退，或者在连击中使用S1或S2把距离拉开一些。</p>
+<p>侧闪反击不会丢失加攻，该用也可以用。一旦进入比较难处理的局面，比如电脑有S技了，就要坚决防御把霸体弄出来，再正常把S技骗掉。这也是这种打法最大的问题，因为大部分时间都是在近/中距离纠缠，吃伤害或者被迫防御的概率还是蛮大的。</p>
 <div id="短战斗-13" class="section level4 hasAnchor" number="4.6.2.1">
 <h4><span class="header-section-number">4.6.2.1</span> 短战斗<a href="斗士系.html#短战斗-13" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>上来充满霸体，无脑前后前后前后（打中也后退再前冲），弄三个加成出招牌。霸体冷却过程宁可站防也不后退，下一次霸体再充到6层，利用攻击优势搏S2晕点，解决战斗。</p>
+<p>上来充满霸体，无脑前后前后前后（打中也后退再前冲），弄三个加成出招牌，强势进攻。霸体冷却过程宁可站防也不后退，下一次霸体再充到6层，利用攻击优势搏S2晕点，解决战斗。</p>
 </div>
 <div id="长战斗-13" class="section level4 hasAnchor" number="4.6.2.2">
 <h4><span class="header-section-number">4.6.2.2</span> 长战斗<a href="斗士系.html#长战斗-13" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>上来充满霸体，不要无脑冲，安全打法直奔第一个S3，然后利用9秒的霸体再去攒高加攻。之后不要刻意死守加攻，实在丢了就重来，野牛有一个好处就是S3很优秀，所以如果在S1和S2时没有加攻，可以不放，因为没有燃烧和晕点的这两招还不如一个S3。</p>
+<p>野牛很不适合长战斗，但如果真的只有他做为主力，也不是没有办法。</p>
+<p>长战斗就不要太死抱着充能不后退，还是要懂得取舍。例如，上来先用前面说的四连一重战术，搞3个以上的加攻出招牌，用破防压制型打法，但同时把气槽一直攒着，在接近S3的时候如果加攻数量不多，就充霸体来个前后前后，保证在放S3时有足够的加攻并出招牌。这样S3之后又带着霸体和招牌自由行动。总之一直围绕着S3来打。实在进入很尴尬的局面要后闪，丢了就重新来，别为了面子伤了身子。</p>
 </div>
 </div>
 <div id="基地防守-14" class="section level3 hasAnchor" number="4.6.3">
@@ -603,7 +620,7 @@
 </div>
 <div id="短板-15" class="section level4 hasAnchor" number="4.7.1.4">
 <h4><span class="header-section-number">4.7.1.4</span> 短板<a href="斗士系.html#短板-15" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>惊天雷整体优势巨大，没有明显短板。不过要注意侧闪出霸体并只能自保，没有足够的时间反击。另外血量在斗士中是比较低的。远程型的重击也让他和碾碎器一样，在近战压制中感觉差了那么点意思。</p>
+<p>惊天雷整体优势巨大，没有明显短板。不过要注意侧闪出霸体只能自保，没有足够的时间反击。另外血量在斗士中是比较低的。远程型的重击也让他和碾碎器一样，想要连续近战压制时感觉差了那么点意思。</p>
 </div>
 </div>
 <div id="推荐打法-15" class="section level3 hasAnchor" number="4.7.2">
@@ -650,7 +667,7 @@
 <p>作为斗士，护甲让铁皮自身的坦度提升不少。而铁皮对护甲的运用则额外给了他加攻、净化和击晕的多元化能力。要对付电脑的铁皮，破甲依然是关键，而且电脑越挨打护甲层数越多，没有通天晓这样一破到底的还真难保证输出。</p>
 <ul>
 <li>S1：获得20-35%的近战增益，持续8秒。</li>
-<li>S2：连放三炮，前两炮有点像警车的散弹枪（但是实测并没有警车那种飞全屏的射程），然后出7秒霸体（<strong>注意：没打中是不会出霸体的，所以对玩家是个利好</strong>）。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。实战中如果在侧闪时不慎被前两炮打中，甚至还可以闪掉第三炮，看来从漫威游戏中抄来的代码也不太好用啊。</li>
+<li>S2：连放三炮，前两炮有点像警车的散弹枪（但是实测并没有警车那种飞全屏的射程），然后出7秒霸体（<strong>注意：没打中是不会出霸体的，所以对玩家是个利好</strong>）。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。这个技能有个bug，就算被前两炮打中，依然还可以闪掉第三炮，看来从漫威游戏中抄来的代码也不太好用啊。好在电脑会乖乖地吃第三炮。</li>
 <li>S3：同救护车S3动画。刷新所有护甲，并且在剩余战斗中降低对方减益效果10%，可以堆4层。目前想不出有什么特别合适的应用场合。</li>
 </ul>
 </div>
