--- a/in_store_tomorrow.html
+++ b/in_store_tomorrow.html
@@ -93,6 +93,11 @@
         document.getElementById('itemPrice').innerHTML = '<strong>总价格为：</strong>' + getItems(allItems_cn, item_prices, false).price + ' = <strong>' + eval(getItems(allItems_cn, item_prices, false).price) / 10000 + ' 万</strong>突袭币';
     </script>
 
+    <h2 class="title">突袭商店日历</h2>
+    <p>如果你想得到突袭商品的提醒，可以订阅<a href="raidcalendar.ics">这个日历地址</a>或者点击下载后导入，具体方法可参考<a href=https://jingyan.baidu.com/article/e8cdb32b5f0c9276052bad85.html>这个链接</a>或自行搜索“手机导入ics日历URL”。</p>
+    <p>如果有一些商品你不想关注，导入后删除循环日历事件即可。</p>
+    <p>（其实我更希望卡邦早点把突袭商品更新一下！）</p>
+
 </body>
 
 </html>
