--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <h1 class="title">百炼为战信息小站</h1>
     <!-- </div> -->
     <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>，
-    <a href=https://kmcbest.tk>kmcbest.tk</a>，<a href=https://kmcbest.github.io>kmcbest.github.io</p>
+    <a href=https://kmcbest.tk>kmcbest.tk</a>，<a href=https://kmcbest.github.io>kmcbest.github.io</a></p>
+
+        <p><font color="FF0000"> 近期有人利用百炼为战安卓更新包列表中的邮件地址猜测游戏账号与密码，已有人受害，请各位在邮件列表中的朋友如果密码过于简单的，及时修改游戏账号的密码，保护账号安全。安卓更新包列表共享文档不再启用。</font></p>
     <ul>
         <li><a href="chars_book/index.html">全人物解析</a></li>
         <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
@@ -36,7 +38,7 @@
         <li><a href="in_store_tomorrow.html">突袭商店明日商品</a></li>
         <li><a href="calculator_cn.html">锻造计算器</a></li>
         <li><a href="pop_crystal.html">开水晶模拟器</a></li>
-        <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li>
+        <!-- <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li> -->
 <!--        <li><a href="https://pan.baidu.com/s/1j5uF86XEF8QLgKv4TWM4Tg">安卓乱码补丁（提取码：k08s）</a></li>-->
         <li><a href="longxin.html">《塞伯坦之魂》</a></li>
     </ul>
