--- a/in_store_tomorrow.html
+++ b/in_store_tomorrow.html
@@ -96,6 +96,7 @@
     <h2 class="title">突袭商店日历</h2>
     <p>如果你想得到突袭商品的提醒，可以订阅<a href="raidcalendar.ics">这个日历地址</a>或者点击下载后导入，具体方法可参考<a href=https://jingyan.baidu.com/article/e8cdb32b5f0c9276052bad85.html>这个链接</a>或自行搜索“手机导入ics日历URL”。</p>
     <p>如果有一些商品你不想关注，导入后删除循环日历事件即可。</p>
+    <p>查看完整的日历展示，点<a href="https://calendar.zoho.com/zc/ui/embed/#calendar=094d4c5490c5f52a045873d6375073bf4f508c8b2ce757122b430796d31e95f33810590d0552eaef82b2cbef77ecf5ac&mode=pub&timezone=Asia/Taipei">这里</a>（加载可能有点慢请耐心等待）</p>
     <p>（其实我更希望卡邦早点把突袭商品更新一下！）</p>
 
 </body>
