更新部分类别的描述

--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -195,7 +195,7 @@
             <section class="normal" id="section-">
 <div id="战士系" class="section level1 hasAnchor" number="5">
 <h1><span class="header-section-number">5</span> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<a href="战士系.html#战士系" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>战士系机器人刀锋凛凛，以流血能力和克规避能力为主要特色。不过探长的存在也让战士系整体实力偏低。</p>
+<p>战士系机器人刀锋凛凛，直达要害。以流血、暴击、暴伤能力和克规避能力为主要特色。</p>
 <p>类别关键字：流血，暴击，克规避</p>
 <div id="碎骨魔" class="section level2 hasAnchor" number="5.1">
 <h2><span class="header-section-number">5.1</span> 碎骨魔<a href="战士系.html#碎骨魔" class="anchor-section" aria-label="Anchor link to header"></a></h2>
@@ -657,8 +657,8 @@
 <div id="短板-26" class="section level4 hasAnchor" number="5.8.1.4">
 <h4><span class="header-section-number">5.8.1.4</span> 短板<a href="战士系.html#短板-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p><em>其实亡灵天尊还是有独特玩法和实力的。以下与其说是短板，不如说是因为比预期实力要弱形成的吐槽。</em></p>
-<p>如果不考虑无关痛痒的饿鲨，亡灵天尊是作为Kabam真正意义上的“亲儿子”出场的原创角色，其获取的难度之大，理应让他站在食物链的最顶端，至少与<a href="爆破系.html#震天尊">震天尊</a>比肩，毕竟这是一个泰坦和震天尊进行火种融合后的产物嘛！然而先不说他没有震天尊的自动加气和10秒不死金身，他的类别就已然让他矮了一截：他被安排进了游戏中整体最弱的战士系……技能看起来比较复杂，但进攻的核心依然是围绕连击、流血与暴击，这与战士系的代表人物漂移有相似之处。而他作为战士系，引以为傲的流血技能也被上游的斗士系克得死死。尤其是连小枪和普通近战都100%刷新流血时间，高觉醒的猩猩站着不动让亡灵天尊打，也只是越打血越多——玩家实测中，一只满锻猩猩站着不动让故事终章的亡灵天尊Boss打了2000多下，还是满血！（据说后续经过调整后似乎没有这个问题了，具体没太注意）</p>
-<p>在觉醒前，发动S技的时候可能会把亡灵天尊从势不可挡的力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。</p>
+<p>如果不考虑无关痛痒的饿鲨，亡灵天尊是作为Kabam真正意义上的“亲儿子”出场的原创角色，其获取的难度之大，理应让他站在食物链的最顶端，至少与<a href="爆破系.html#震天尊">震天尊</a>比肩，毕竟这是一个泰坦和震天尊进行火种融合后的产物嘛！可是他没有震天尊的自动加气和8秒不死金身，也没有回血，进攻的核心依然是围绕连击、流血与暴击，这与战士系的代表人物漂移有相似之处。而他作为战士系，引以为傲的流血技能也被上游的斗士系克得死死。尤其是连小枪和普通近战都100%刷新流血时间，高觉醒的猩猩站着不动让亡灵天尊打，也只是越打血越多——玩家实测中，一只满锻猩猩站着不动让故事终章的亡灵天尊Boss打了2000多下，还是满血！（据说后续经过调整后似乎没有这个问题了，具体没太注意）</p>
+<p>在觉醒前，发动S技的时候可能会把亡灵天尊从势不可挡的力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。</p>
 </div>
 </div>
 <div id="推荐打法-26" class="section level3 hasAnchor" number="5.8.2">
