--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -237,11 +237,11 @@
 <li>首席医疗官（救护车）。擎天柱变形时（指重击和S3时<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>）随机获得回血（触发回血时，不触发加攻），血越少回血概率越高，最高概率100%（也就是理论上只剩1血时）。本来单兵能力就很强的战擎拥有续航能力简直如虎添翼。实测可以上多个救护车，提高触发回血的概率和回血强度（配四个救护车可以一次出三层回血，回血15%）。</li>
 <li>榜样（小黄蜂）：加护甲</li>
 <li>中尉（爵士、警车）：加护甲和加攻</li>
-<li>擎天柱组合金刚：开局带40%的能量。2022年8月上线的新协同，可以说是大大改变了战况，提升了擎天柱的协同体验。百炼为战出组合金刚的呼声一直很高，但是明眼人都看得出来百炼是格斗游戏，不像地球之战。但适逢飞毛腿的发布，让这个游戏终于有五个同属一个组合金刚的人物<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>，这个新协同也可谓卡邦在“组合金刚”方面的一种探索。此协同要求：
+<li>擎天柱组合金刚：<strong>开局带一定百分比的能量（五星40%、四星30%，三星20%，二星10%）</strong>。2022年8月上线的新协同，可以说是大大改变了战况，提升了擎天柱的协同体验。百炼为战出组合金刚的呼声一直很高，但是明眼人都看得出来百炼是格斗游戏，不像地球之战。但适逢飞毛腿的发布，让这个游戏终于有五个同属一个组合金刚的人物<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>，这个新协同也可谓卡邦在“组合金刚”方面的一种探索。此协同要求：
 <ul>
 <li>队伍中至少有两人</li>
 <li>必须要有一个战擎</li>
-<li>其余成员可以在战擎、幻影、飞毛腿、G1铁皮、警车之中选择，可以重复，但不能选择之外的角色，否则协同不起作用。而很快玩家就发现，带多个战擎可以让开局的能量更多，具体来说，五星和四星都是给一格多，但是五星和四星不能叠加，三星则是给将近一格，可以与五星或四星叠加。于是<strong>队伍中有五三或者四三战擎，所有成员开局可以出S2</strong>！于是就有人开发出了盟战用五星、三星战擎加五星警车去打，虽然队伍中只有两个有效人物，但是战擎开局有个S2起步，可以迅速启动S3永久破甲，警车则可以早早S2糊脸，或者后撤上到S3锁气，盟战难度70以下这个组合基本上是横着走（而且明显这个协同不止加能量，攻击力也大幅度提升了）。推图用这个组合，低难度的关卡可以警车一路S2解决战斗。</li>
+<li>其余成员可以在战擎、幻影、飞毛腿、G1铁皮、警车之中选择，可以重复，但不能选择之外的角色，否则协同不起作用。而很快玩家就发现，带多个战擎可以让开局的能量更多，具体来说，五星和四星不能叠加，但是三星和二星可以与五星或四星叠加，并且明显比标称的百分比要高。于是<strong>队伍中有五三或者四三战擎，所有成员开局可以出S2</strong>！于是就有人开发出了盟战用五星、三星战擎加五星警车去打，虽然队伍中只有两个有效人物，但是战擎开局有个S2起步，可以迅速启动S3永久破甲，警车则可以早早S2糊脸，或者后撤上到S3锁气，盟战难度70以下这个组合基本上是横着走（而且明显这个协同不止加能量，攻击力也大幅度提升了）。推图用这个组合，低难度的关卡可以警车一路S2解决战斗，或者把三星二星战擎都上，配四星或五星战擎主力，开局打几拳就已经S3了。</li>
 </ul></li>
 </ul>
 </div>
@@ -744,8 +744,8 @@
 </div>
 <div id="招牌-7" class="section level4 hasAnchor" number="3.9.1.2">
 <h4><span class="header-section-number">3.9.1.2</span> 招牌<a href="战术系.html#招牌-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>补天士崛起</strong>：补天士每失去10%的血量就提升5~15%的攻击力。面对故事和特殊任务的Boss时翻倍。这招牌有点汽车大师的味道，吃程序。</p>
-<p><strong>据玩家称，目前这个招牌有bug，是不起作用的。</strong></p>
+<p><strong>补天士崛起</strong>：补天士每失去10%的血量就提升5~15%的攻击力。面对故事和特殊任务的Boss时翻倍。这招牌有点汽车大师的味道（又是学斗士的），吃程序。</p>
+<p><strong>自发布至今，这个招牌依然根本不起作用，血量再低，攻击也没有提高。唯一的提高还是来自勇气精通。</strong></p>
 </div>
 <div id="协同-8" class="section level4 hasAnchor" number="3.9.1.3">
 <h4><span class="header-section-number">3.9.1.3</span> 协同<a href="战术系.html#协同-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
