--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -729,7 +729,10 @@
 <li>重击：30%概率得到一个14%的近战加成5秒。</li>
 <li>状态变化：体力60%以上称为<strong>整洁状态</strong>，体力40%以下称为<strong>污损状态</strong>，40~60%这一段没有状态。这设定是来自飞毛腿自恋的个性，一如飞毛腿的专属水晶名叫“虚荣水晶”。
 <ul>
-<li>整洁状态下：拥有8~20%的护甲，10%的概率规避近战攻击，30%规避近战暴击<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。<strong>飞毛腿是第一个能规避的斗士！</strong></li>
+<li>整洁状态下：拥有8~20%的护甲，10%的概率规避近战攻击，30%规避近战暴击<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。<strong>飞毛腿是第一个能规避的斗士！</strong>
+<ul>
+<li>另外根据国外网友的视频展示，飞毛腿在拥有规避加成时，面对挽歌闪避或格挡三次本来是会被施加恐惧，但可能是程序有bug，要施加的恐惧会显示为第二层规避加成（但其实是施加了恐惧的）。因为双方的类别克制，这bug反而显得很合理。</li>
+</ul></li>
 <li>污损状态下：拥有8~20%的近战加成，5秒不可阻挡。和爆威提前喊一句“你会后悔的！”才出霸体不一样，飞毛腿体力降到40%以下会立即触发不可阻挡，所以每局至少有一次可以“无赖”地从对方的进攻中脱逃。</li>
 </ul></li>
 <li>S技：
