--- a/chars_book/爆破系.html
+++ b/chars_book/爆破系.html
@@ -195,7 +195,7 @@
             <section class="normal" id="section-">
 <div id="爆破系" class="section level1 hasAnchor" number="8">
 <h1><span class="header-section-number">8</span> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<a href="爆破系.html#爆破系" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>爆破系机器人从设计上说都是依靠特殊技进行爆发伤害的好手，但随着时间的推移和震天尊极大地影响了平衡，爆破系的实力担当越来越少。</p>
+<p>爆破系机器人从设计上说都是依靠特殊技进行爆发伤害的好手，但随着时间的推移和震天尊极大地影响了平衡，爆破系其他角色几乎成了小透明，类别综合水平沦为垫底。</p>
 <p>类别关键字：特殊伤害，燃烧，远程，眩晕，减抗性，神</p>
 <div id="电影铁皮" class="section level2 hasAnchor" number="8.1">
 <h2><span class="header-section-number">8.1</span> 电影铁皮<a href="爆破系.html#电影铁皮" class="anchor-section" aria-label="Anchor link to header"></a></h2>
