更新第二个五星

--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -901,6 +901,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="第二个五星" class="section level3 hasAnchor" number="2.2.12">
 <h3><span class="header-section-number">2.2.12</span> 第二个五星<a href="成长日历.html#第二个五星" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>9月30日拿到五星黄蜂勇士后，又玩了一段时间，在10月13日就凑到了第二个五星。这里面全是硬攒，没有运气（又买了一次600钻五个精英水晶的礼包，全三星，4阶骑士开出T3C）。不过因为有了升到50级、完成20目标、完成31目标这几处送的五星碎片，所以显得挺快。</p>
+<p>第二个五星开出来是——<strong>蝎子</strong>！又是一个动物园角色。目前有四星猩猩和黄豹，五星黄蜂和蝎子，看来后面突袭小队倒是不愁了。只是我不太想养蝎子，战士系的资源想投给亡灵天尊和挽歌这些新人物。</p>
 
 </div>
 </div>
