原生体成长记正式发布，却赶上关服通告

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>，
     <a href=https://kmcbest.tk>kmcbest.tk</a>，<a href=https://kmcbest.github.io>kmcbest.github.io</a></p>
 
-        <p><font color="FF0000"> 近期有人利用百炼为战安卓更新包列表中的邮件地址猜测游戏账号与密码，已有人受害，请各位在邮件列表中的朋友如果密码过于简单的，及时修改游戏账号的密码，保护账号安全。安卓更新包列表共享文档不再启用。</font></p>
+        <p>百炼为战将于2023年1月13日关服，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。本站将继续更新直到游戏结束。</p>
     <ul>
+        <li><a href="protoform_book/index.html"><font color="FF0000">【更新】百炼为战纯新手教程</font></a></li>
         <li><a href="chars_book/index.html">全人物解析</a></li>
         <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
         <li><a href="5star.html">五星人物动态</a></li>
