--- a/longxin.html
+++ b/longxin.html
@@ -1639,10 +1639,10 @@ pre code {
 
 <div id="TOC">
 <ul>
-<li><a href="#上篇">上篇</a></li>
-<li><a href="#中篇">中篇</a></li>
-<li><a href="#下篇">下篇</a></li>
-<li><a href="#尾声">尾声</a></li>
+<li><a href="#上篇" id="toc-上篇">上篇</a></li>
+<li><a href="#中篇" id="toc-中篇">中篇</a></li>
+<li><a href="#下篇" id="toc-下篇">下篇</a></li>
+<li><a href="#尾声" id="toc-尾声">尾声</a></li>
 </ul>
 </div>
 
@@ -1785,7 +1785,7 @@ pre code {
 <hr />
 <ol>
 <li id="fn1"><p>指贴吧用户“羽炫2013”。2020年疫情居家期间加入的某传奇人物，号称有战力9万的基地，25个55满锻，并且在游戏的“内测服”玩着6星机器人，全服排名前十的盟他都呆过，等等。只在贴吧活跃，从未透露过自己游戏账号。<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
-<li id="fn2"><p>指疫情期间公屏中出现的一大票新盟，都带“阁”字，大有取代塞伯坦联盟的趋势。然而随着中小学复课，已逐渐消失。<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p>指疫情期间公屏中出现的一大票新盟，都带“阁”字，大有取代塞伯坦联盟的趋势。然而随着中小学复课（也可能是开挂被封了），已逐渐消失。<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
 <li id="fn3"><p>2022年4月26日，塞伯坦联盟大家庭群正式被腾讯和谐。原因不明，但懂的都懂。万幸，该群最后一句话是龙欣发的。后来他们又利用之前“塞伯坦之家（六合一）”群继续了。<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
 <li id="fn4"><p>指玩家“马团团”，塞伯坦联盟大家庭现任群主。再注：一碰到有人开车，群主的职务就会被人“客气”地交来交去，但终归会回到团团手里。<a href="#fnref4" class="footnote-back">↩︎</a></p></li>
 <li id="fn5"><p>曾经大家都比较关注下月机器人，一到月半就开始问下月出什么机器人，卡邦的版主也总留下一些“猜谜”与玩家互动。但自从卡邦总部“搬到”印度，基本上游戏已经被放弃，玩家也多有弃坑，问的人自然少了。由于很长时间钢锁和漂移都没有加入人物币商店，于是每月有人问的时候，总有人编说下月有钢锁或者漂移……<a href="#fnref5" class="footnote-back">↩︎</a></p></li>
