--- a/protoform_book/index.html
+++ b/protoform_book/index.html
@@ -248,7 +248,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">百炼为战：原生体成长记</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-10-14</em></p>
+<p class="date"><em>更新时间：2022-10-15</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -260,6 +260,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="前言" class="section level2 hasAnchor" number="1.2">
 <h2><span class="header-section-number">1.2</span> 前言<a href="index.html#前言" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><strong>令人唏嘘的是，本文正式发布的当天，竟然赶上百炼为战宣布即将关服。</strong></p>
 <p>本文是一篇写作于2022年，基于写作时刻的游戏现状，站在新入坑玩家的角度的新手教程<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>。游戏从上线到现在已经5年多了，老玩家一天天在流失，新人越来越少。我给这个游戏写了很多教程，但都是针对成长型玩家的，很多新人表示看不太明白。终于还是下决心再从零出发，希望这篇初级教程能够吸引更多玩家加入或者回到这个游戏来。</p>
 <p>由于游戏是不断更新的，一些有时效性的内容已经尽量标注出来，但在你读到本文时，可能一些内容或参数没有及时更新或删除，以游戏中提供的为准。</p>
 <p>本文将以“<a href="成长日历.html#成长日历">成长日历</a>”和“<a href="技术资料.html#技术资料">技术资料</a>”两个方向来写作。成长日历是从玩家游戏时间的角度出发，还原游戏一天天玩（gān）下去的过程中，每阶段要关注的点、要收集的资源、可借鉴的技巧和要避免的坑。技术资料则是各个模式的介绍，补充官方在这方面引导的不足，方便有针对性的查阅。</p>
