--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -209,6 +209,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.11.2" data-path="成长日历.html"><a href="成长日历.html#成长期的同盟任务盟战"><i class="fa fa-check"></i><b>2.2.11.2</b> 成长期的同盟任务（盟战）</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2.12" data-path="成长日历.html"><a href="成长日历.html#第二个五星"><i class="fa fa-check"></i><b>2.2.12</b> 第二个五星</a></li>
+<li class="chapter" data-level="2.2.13" data-path="成长日历.html"><a href="成长日历.html#关服通知"><i class="fa fa-check"></i><b>2.2.13</b> 关服通知</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -902,6 +903,24 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">2.2.12</span> 第二个五星<a href="成长日历.html#第二个五星" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>9月30日拿到五星黄蜂勇士后，又玩了一段时间，在10月13日就凑到了第二个五星。这里面全是硬攒，没有运气（又买了一次600钻五个精英水晶的礼包，全三星，4阶骑士开出T3C）。不过因为有了升到50级、完成20目标、完成31目标这几处送的五星碎片，所以显得挺快。</p>
 <p>第二个五星开出来是——<strong>蝎子</strong>！又是一个动物园角色。目前有四星猩猩和黄豹，五星黄蜂和蝎子，看来后面突袭小队倒是不愁了。只是我不太想养蝎子，战士系的资源想投给亡灵天尊和挽歌这些新人物。</p>
+</div>
+<div id="关服通知" class="section level3 hasAnchor" number="2.2.13">
+<h3><span class="header-section-number">2.2.13</span> 关服通知<a href="成长日历.html#关服通知" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>还以为我的新手教程能帮到一部分想要在今年入坑的玩家，可是本来打算在10月15号发布，没想到官方的关服公告竟然比我更快。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-20"></span>
+<img src="02-juvenile_insertimage_10.png" alt="关服公告"  />
+<p class="caption">
+图2.18: 关服公告
+</p>
+</div>
+<p>随着公告而来的还有5个完整的五星水晶，我开出来的是：天火、战威、碾碎器、红蜘蛛和喷气机。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-21"></span>
+<img src="02-juvenile_insertimage_9.png" alt="分手纪念"  />
+<p class="caption">
+图2.19: 分手纪念
+</p>
+</div>
+<p>游戏将在2023年1月13日停服下线，虽然还有三个月的时间，但在一片嗟叹中，很多玩家也当场离开或不久就要离开，所以同盟的资源产量想必也会大幅降低，再费力去肝资源升级似乎已经意义不大，我想我还是尽量把这篇教程的<a href="技术资料.html#技术资料">技术资料</a>部分完善，作为游戏的历史留存下来。</p>
 
 </div>
 </div>
