--- a/protoform_book/技术资料.html
+++ b/protoform_book/技术资料.html
@@ -209,6 +209,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.11.2" data-path="成长日历.html"><a href="成长日历.html#成长期的同盟任务盟战"><i class="fa fa-check"></i><b>2.2.11.2</b> 成长期的同盟任务（盟战）</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2.12" data-path="成长日历.html"><a href="成长日历.html#第二个五星"><i class="fa fa-check"></i><b>2.2.12</b> 第二个五星</a></li>
+<li class="chapter" data-level="2.2.13" data-path="成长日历.html"><a href="成长日历.html#关服通知"><i class="fa fa-check"></i><b>2.2.13</b> 关服通知</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -268,13 +269,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>25级解锁塞伯坦传奇</li>
 </ul></li>
 </ul>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-20"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-22"></span>
 <img src="11-techspecs_insertimage_1.png" alt="20级之前只能上三个人"  />
 <p class="caption">
 图3.1: 20级之前只能上三个人
 </p>
 </div>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-21"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-23"></span>
 <img src="11-techspecs_insertimage_2.png" alt="20级解锁队长难度"  />
 <p class="caption">
 图3.2: 20级解锁队长难度
@@ -338,7 +339,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="事件目标" class="section level3 hasAnchor" number="3.2.1">
 <h3><span class="header-section-number">3.2.1</span> 事件目标<a href="技术资料.html#事件目标" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-22">表3.1: </span>事件目标表（2022）</caption>
+<caption><span id="tab:unnamed-chunk-24">表3.1: </span>事件目标表（2022）</caption>
 <colgroup>
 <col width="5%" />
 <col width="47%" />
@@ -643,7 +644,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="同盟任务盟战" class="section level3 hasAnchor" number="3.3.1">
 <h3><span class="header-section-number">3.3.1</span> 同盟任务（盟战）<a href="技术资料.html#同盟任务盟战" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-23">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-25">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="15%" />
 <col width="84%" />
@@ -770,7 +771,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-24">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-26">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
