塞伯坦之魂更新下线通知

--- a/longxin.html
+++ b/longxin.html
@@ -1750,7 +1750,7 @@ pre code {
 </div>
 <div id="尾声" class="section level1">
 <h1>尾声</h1>
-<p>由于经营不善，百炼为战在印度公司手上也没有活过两年，终于在五星6阶发布后因为bug太多而无疾而终。玩家们四散而去，有的成了公司领导，有的成了玩具大咖，或者各自岗位上的佼佼者，有的顺利抱得美人归。但他们都有一个共同的特点：对百炼为战的生涯绝口不提。</p>
+<p>由于经营不善，百炼为战在印度公司手上也没有活过两年<a href="#fn49" class="footnote-ref" id="fnref49"><sup>49</sup></a>，终于在五星6阶发布后因为bug太多而无疾而终。玩家们四散而去，有的成了公司领导，有的成了玩具大咖，或者各自岗位上的佼佼者，有的顺利抱得美人归。但他们都有一个共同的特点：对百炼为战的生涯绝口不提。</p>
 <p>一日是天气很冷的午后，我来陈老或家吃过午饭，坐着喝茶，觉得外面有人进来了，便回头去看。我看时，不由的非常出惊，慌忙站起身，迎着走去。</p>
 <p>这来的便是龙欣。虽然我一见便知道是龙欣，但又不是我这记忆上的龙欣了。他身材增加了一倍；先前的紫色的圆脸，已经变作灰黄，而且加上了很深的皱纹；眼睛也像他父亲一样，周围都肿得通红，这我知道，在工地翻沙子的人，终日吸着粉尘，大抵是这样的。他头上是一顶破毡帽，身上只一件极薄的棉衣，浑身瑟索着；手里提着一个纸包和一支长烟管，那手也不是我所记得的一不小心把侦查T4C点给反冲升5阶的手，却又粗又笨而且开裂，像是松树皮了。</p>
 <p>我这时很兴奋，但不知道怎么说才好，只是说：</p>
@@ -1833,6 +1833,7 @@ pre code {
 <li id="fn46"><p>指三疯和尚，擅泡妞，经常教育龙欣要热爱生活。<a href="#fnref46" class="footnote-back">↩︎</a></p></li>
 <li id="fn47"><p>指玩家“有可青”，原之刃盟友，后入雷霆拯救队。为龙欣专职盟战带打。<a href="#fnref47" class="footnote-back">↩︎</a></p></li>
 <li id="fn48"><p>指玩家“心跳权健”。原qj168盟主，解散后成立了雷霆拯救队，专门搜罗雇佣兵打盟战。<a href="#fnref48" class="footnote-back">↩︎</a></p></li>
+<li id="fn49"><p>在<a href="#中篇">中篇</a>一开头提到卡邦2020年10月8日关掉论坛，我便在此文随口写下了“没有活过两年”的预言，没想到基本上成真了——在两年零一个星期后，卡邦于2022年10月15日宣布了关服的决定，并将在2023年1月13日将《百炼为战》正式下线。<a href="#fnref49" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
 
